--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     testImplementation("junit:junit")
-    implementation 'com.github.freeclimbapi:java-sdk:5.3.0'
+    implementation 'com.github.freeclimbapi:java-sdk:5.3.3'
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
 }
 
 mainClassName = 'main.java.hello.Application'
