--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'application'
 
-bootJar {
-    version =  '3.0.6'
-}
+// bootJar {
+//     version =  '3.0.6'
+// }
 
 repositories {
     mavenCentral()
@@ -29,9 +29,11 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     testImplementation("junit:junit")
-    implementation 'com.github.freeclimbapi:java-sdk:5.4.0'
+    implementation 'com.github.freeclimbapi:java-sdk:5.5.3'
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
 }
 
 mainClassName = 'main.java.hello.Application'
